# agent-desktop

./: .gitignore  Cargo.toml  Package.swift  ROADMAP.md  bench.sh
.build/: build.db  plugin-tools.yaml
.build/arm64-apple-macosx/debug/: description.json  spike-ax-perf  spike-cgevent  spike-daemon  spike-screenshot
Sources/CLI/: AgentComputer.swift  Connection.swift  Output.swift  main.swift
Sources/Daemon/: AppManager.swift  Capture.swift  Input.swift  RefMap.swift  Snapshot.swift  main.swift
Sources/Shared/: Errors.swift  Protocol.swift  Types.swift
Sources/Spikes/AXActions/: main.swift
Sources/Spikes/AXPerf/: main.swift
Sources/Spikes/CGEvent/: main.swift
Sources/Spikes/Daemon/: main.swift
Sources/Spikes/Screenshot/: main.swift
crates/cli/: Cargo.toml
crates/cli/src/: connection.rs  main.rs  output.rs
crates/cli/tests/: output.rs
crates/cli/tests/common/: mod.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: app.rs  ax_engine.rs  browser_bridge.rs  capture.rs  cdp_engine.rs  detector.rs  input.rs  lib.rs  main.rs  ns_workspace.rs  refmap.rs
crates/daemon/tests/: actions.rs  app_mgmt.rs  errors.rs  lifecycle.rs  screenshot.rs  smoke.rs  snapshot.rs
crates/daemon/tests/common/: mod.rs
crates/shared/: Cargo.toml
crates/shared/src/: errors.rs  lib.rs  protocol.rs  types.rs
openspec/changes/agent-browser-bridge/: design.md  tasks.md
openspec/changes/bridge-fixes-v1/: design.md  proposal.md  tasks.md
openspec/changes/bridge-optimization/: tasks.md
openspec/changes/comprehensive-test-suite/: tasks.md
openspec/changes/mvp-agent-computer/: design.md  proposal.md  tasks.md
openspec/changes/perf-optimize-v1/: proposal.md  tasks.md
openspec/changes/rust-rewrite-v2/: tasks.md
openspec/specs/app-management/: spec.md
openspec/specs/bridge-lifecycle/: spec.md
openspec/specs/snapshot/: spec.md
skills/agent-computer/: SKILL.md
skills/agent-desktop/: SKILL.md
spikes/: S1_ax_perf_results.md  S2_axorcist_eval.md  S3_cgevent_results.md  S4_screenshot_results.md  S5_daemon_results.md  S6_bench_after.txt  S6_bench_before.txt  S6_snapshot_profiling.md
(+419 files in other folders)
