[package]
name = "agent-computer-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agent-computer"
path = "src/main.rs"

[dependencies]
agent-computer-shared = { path = "../shared" }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
libc = "0.2"
ureq = "2"
dirs = "6.0"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
