[package]
name = "agent-computer-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agent-computer-daemon"
path = "src/main.rs"

[dependencies]
agent-computer-shared = { path = "../shared" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tungstenite = { workspace = true }
core-graphics = "0.24"
core-foundation = "0.10"
