[package]
name = "agent-computer-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agent-computer-daemon"
path = "src/main.rs"

[dependencies]
agent-computer-shared = { path = "../shared" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
core-graphics = { version = "0.24", features = ["highsierra"] }
core-foundation = "0.10"
foreign-types = "0.5"
libc = "0.2"
dirs = "6.0"
chrono = "0.4"
ureq = "2"
regex-lite = "0.1"
objc2 = "0.6.4"
objc2-foundation = "0.3.2"
objc2-app-kit = { version = "0.3.2", features = ["NSRunningApplication", "NSWorkspace"] }
